# Eng-ola-control-center

./: .dockerignore  .env.example  .gitignore  .repo-initialized  BUILD_ANDROID_AAB.ps1  BUILD_ANDROID_APK.ps1  CLEAN_BUILD_OUTPUTS.ps1  DEPLOY_HUGGINGFACE_SPACE.ps1  Dockerfile  INSTALL_AND_RUN.ps1  README.md  RUN_APP.bat  RUN_FLET_DESKTOP.ps1  RUN_FLET_WEB.ps1  RUN_TESTS.ps1  main.py  prompt.md  pyproject.toml  render.yaml  requirements.txt  run.bat  run_desktop.bat  run_web.bat  sync.bat  sync_repo.ps1
docs/: AI_GUARDRAILS.md  ANDROID_BUILD_GUIDE.md  DATABASE_SCHEMA.md  DESIGN_SYSTEM.md  FEATURE_SPECIFICATION.md  HUGGINGFACE_SPACES_DEPLOYMENT.md  IOS_PWA_GUIDE.md  KNOWN_LIMITATIONS.md  PRODUCT_VISION.md  PROJECT_REPORT.md  RENDER_DEPLOYMENT.md  SECURITY_MODEL.md  TEST_REPORT.md  USER_JOURNEYS.md
ola_360/: __init__.py  app.py  main.py
ola_360/components/: app_shell.py  bottom_navigation.py  dialogs.py  forms.py  ui.py
ola_360/core/: config.py  localization.py  logging_config.py  routing.py  security.py  theme.py
templates/: agenda_items_template.csv  attachments_template.csv  attendees_template.csv  comments_template.csv  commitments_template.csv  critical_issues_template.csv  decisions_template.csv  meeting_notes_template.txt  meetings_template.csv  milestones_template.csv  personal_events_template.csv  personal_tasks_template.csv  private_notes_template.csv  project_updates_template.csv  projects_template.csv  warning_evidence_template.csv  warnings_template.csv  wellbeing_checkins_template.csv
tests/: test_core.py  test_layout_contracts.py
(+46 files in other folders)
