[project]
name = "ola-360"
version = "0.1.0"
description = "Mobile-first Flet executive PMO chief of staff for Eng. Ola"
requires-python = ">=3.11"
dependencies = [
  "flet==0.85.3",
  "flet-web==0.85.3",
  "fastapi==0.139.0",
  "uvicorn[standard]==0.50.0",
  "openpyxl>=3.1.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]